<resources>
    <string name="app_name">CPL</string>
    <string name="title">Welcome to the Calgary Public Library</string>
    <string name="title_search">Search</string>
    <string name="title_hr">HR</string>
    <string name="title_hrp">Homebound Reader Program</string>
    <string name="title_home">Home</string>
    <string name="library_logo">Library Logo</string>
    <string name="hombound_reader">Homebound Reader</string>
    <string name="volunteer">Volunteer</string>
    <string name="admin">Administrator</string>
    <string name="title_activity_hr">Homebound Reader</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_volunteer">Volunteer</string>
    <string name="title_activity_admin">Administrator</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="title_modify">Modify</string>
    <string name="book_author">Author(s)</string>
    <string name="book_title">Title</string>
    <string name="book_genre">Genre</string>
    <string name="title_hrlist">Activities in Progress</string>
    <string name="book_copies">No. of Copies</string>
    <string name="title_add">Add a Book</string>
    <string name="title_delete">Delete a Book</string>
    <string name="title_jobs">Jobs</string>
    <string name="available_jobs">Available Jobs</string>
    <string name="select">Select</string>
    <string name="jobs_in_progress">Jobs in Progress</string>
    <string name="delivered">Delivered</string>
    <string name="isbn">ISBN</string>
    <string name="fname">First Name(s)</string>
    <string name="lname">Last Name</string>
    <string name="all_books">All Books</string>
    <string name="title_year">Year</string>
    <string name="bid">Branch ID</string>
    <string name="id">ID</string>
    <string name="insert">Insert</string>
    <string name="remove">Remove</string>
    <string name="delete_from_library">Delete From Library</string>
    <string name="title_activity_admin_search">ActivityAdminSearch</string>

</resources>
