<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/library_logo"
        app:srcCompat="@drawable/calgary_public_library_logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/b1"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/hombound_reader"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/b2"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/volunteer"
        android:layout_below="@+id/b1"
        android:layout_alignLeft="@+id/b1"
        android:layout_alignStart="@+id/b1" />

    <Button
        android:id="@+id/b3"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/admin"
        android:layout_below="@+id/b2"
        android:layout_alignLeft="@+id/b2"
        android:layout_alignStart="@+id/b2" />
</RelativeLayout>