<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_add"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/book_title"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/input_title"
        android:layout_marginTop="10dp"
        android:text="@string/book_author"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignTop="@+id/button1"
        android:text="@string/book_genre"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="45"
        android:text="@string/book_title"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toLeftOf="@+id/button1"
        android:layout_toStartOf="@+id/button1" />

    <EditText
        android:id="@+id/input_fname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="45"
        android:text="@string/fname"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/input_title"
        android:layout_alignStart="@+id/input_title" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_search"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/input_lname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_fname1"
        android:layout_alignStart="@+id/input_fname1"
        android:layout_below="@+id/input_fname1"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="45"
        android:text="@string/lname"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/input_fname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_lname1"
        android:layout_alignStart="@+id/input_lname1"
        android:layout_below="@+id/input_lname1"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="45"
        android:text="@string/fname"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/input_lname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_fname2"
        android:layout_alignStart="@+id/input_fname2"
        android:layout_below="@+id/input_fname2"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="45"
        android:text="@string/lname"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/input_lname2"
        android:layout_marginTop="23dp"
        android:text="@string/isbn"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/input_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="13"
        android:text="@string/isbn"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/input_lname2"
        android:layout_alignStart="@+id/input_lname2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/input_isbn"
        android:layout_marginTop="10dp"
        android:text="@string/title_year"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_isbn"
        android:layout_alignStart="@+id/input_isbn"
        android:layout_below="@+id/input_isbn"
        android:ems="10"
        android:maxLength="4"
        android:inputType="textPersonName"
        android:text="@string/title_year"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/bid"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignTop="@+id/textView9"
        android:ems="10"
        android:maxLength="2"
        android:inputType="textPersonName"
        android:text="@string/id"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_copies"
        android:textSize="15sp"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/book_copies"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView10"
        android:layout_toEndOf="@+id/textView10" />


</RelativeLayout>