<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_modify"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_modify"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"
        android:layout_marginRight="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="33dp" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:text="@string/isbn"
        android:textSize="20sp"
        android:layout_above="@+id/editText"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginBottom="36dp" />

    <EditText
        android:id="@+id/input_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="13"
        android:text="@string/isbn"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_copies"
        android:textSize="20sp"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/editText5"
        android:layout_toStartOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/book_copies"
        android:textSize="15sp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/input_isbn"
        android:layout_alignStart="@+id/input_isbn" />



    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rb"
        android:orientation="horizontal"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="64dp"
        android:id="@+id/radioGroup8"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11">

    <RadioButton
        android:id="@+id/rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/remove" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_alignEnd="@+id/textView11"
        android:layout_alignRight="@+id/textView11"
        android:layout_marginBottom="32dp"
        android:text="@string/bid"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/id"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5" />


</RelativeLayout>

