<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_search"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:text="@string/book_title"
        android:textSize="20sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/book_author"
        android:textSize="20sp"
        android:layout_below="@+id/input_title"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_genre"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="74dp" />

    <EditText
        android:id="@+id/input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/book_title"
        android:maxLength="45"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/input_fname1"
        android:layout_alignStart="@+id/input_fname1" />

    <EditText
        android:id="@+id/input_fname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fname"
        android:textSize="15sp"
        android:maxLength="45"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_search"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/input_lname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_fname1"
        android:layout_alignStart="@+id/input_fname1"
        android:layout_below="@+id/input_fname1"
        android:layout_marginTop="14dp"
        android:maxLength="45"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lname"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/input_fname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_lname1"
        android:layout_alignStart="@+id/input_lname1"
        android:layout_below="@+id/input_lname1"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="45"
        android:text="@string/fname"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/input_lname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lname"
        android:textSize="15sp"
        android:layout_below="@+id/input_fname2"
        android:maxLength="45"
        android:layout_alignLeft="@+id/input_fname2"
        android:layout_alignStart="@+id/input_fname2"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/isbn"
        android:textSize="20sp"
        android:layout_below="@+id/input_lname2"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:id="@+id/input_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/isbn"
        android:maxLength="13"
        android:textSize="15sp"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignLeft="@+id/input_lname2"
        android:layout_alignStart="@+id/input_lname2" />

</RelativeLayout>